welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (verLAvant==true) {
        ^